tests/sksl/errors/ArgumentMismatch.dsl.glsl
### Compilation failed:

error: expected 'float', but found 'bool'

1 error
